// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should match styles 1`] = `
.emotion-0 {
  position: relative;
  margin-bottom: 0.4rem;
}

.emotion-1 {
  margin: 0;
  opacity: 0;
  position: absolute;
  z-index: 1;
}

.emotion-1:checked+label {
  color: #181b1c;
}

.emotion-1+label::after {
  content: '';
  opacity: 0;
  -webkit-transform: rotate(-35deg);
  -moz-transform: rotate(-35deg);
  -ms-transform: rotate(-35deg);
  transform: rotate(-35deg);
}

.emotion-1:checked+label::after {
  opacity: 1;
  -webkit-transform: rotate(-50deg);
  -moz-transform: rotate(-50deg);
  -ms-transform: rotate(-50deg);
  transform: rotate(-50deg);
}

.emotion-1:focus+label {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
  padding-right: 0.4rem;
  padding-bottom: 0.2rem;
}

.emotion-2 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 500;
  font-size: 1.7rem;
  line-height: 1.411764705882353;
  color: #3b3f45;
  position: relative;
  padding-left: 3.2rem;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.emotion-2::before,
.emotion-2::after {
  position: absolute;
}

.emotion-2::before {
  border: 2px solid #181b1c;
  background: #ffffff;
  content: '';
  display: inline-block;
  height: 2rem;
  width: 2rem;
  top: -2px;
  left: 0;
}

.emotion-2::after {
  left: 4px;
  top: 4px;
  content: '';
  display: inline-block;
  height: 6px;
  width: 14px;
  border-left: 3px solid #0097a2;
  border-bottom: 3px solid #0097a2;
  -webkit-transition: opacity 0.1s linear,-webkit-transform 0.15s ease-in-out;
  transition: opacity 0.1s linear,transform 0.15s ease-in-out;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
    id="my-checkbox"
    type="checkbox"
  />
  <label
    class="emotion-2"
    for="my-checkbox"
  >
    My checkbox
  </label>
</div>
`;

exports[`Checkbox should match styles 2`] = `
.emotion-0 {
  position: relative;
  margin-bottom: 0.4rem;
}

.emotion-1 {
  margin: 0;
  opacity: 0;
  position: absolute;
  z-index: 1;
}

.emotion-1:checked+label {
  color: #181b1c;
}

.emotion-1+label::after {
  content: '';
  opacity: 0;
  -webkit-transform: rotate(-35deg);
  -moz-transform: rotate(-35deg);
  -ms-transform: rotate(-35deg);
  transform: rotate(-35deg);
}

.emotion-1:checked+label::after {
  opacity: 1;
  -webkit-transform: rotate(-50deg);
  -moz-transform: rotate(-50deg);
  -ms-transform: rotate(-50deg);
  transform: rotate(-50deg);
}

.emotion-1:focus+label {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
  padding-right: 0.4rem;
  padding-bottom: 0.2rem;
}

.emotion-2 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 500;
  font-size: 1.7rem;
  line-height: 1.411764705882353;
  color: #3b3f45;
  position: relative;
  padding-left: 3.2rem;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.emotion-2::before,
.emotion-2::after {
  position: absolute;
}

.emotion-2::before {
  border: 2px solid #181b1c;
  background: #ffffff;
  content: '';
  display: inline-block;
  height: 2rem;
  width: 2rem;
  top: -2px;
  left: 0;
}

.emotion-2::after {
  left: 4px;
  top: 4px;
  content: '';
  display: inline-block;
  height: 6px;
  width: 14px;
  border-left: 3px solid #0097a2;
  border-bottom: 3px solid #0097a2;
  -webkit-transition: opacity 0.1s linear,-webkit-transform 0.15s ease-in-out;
  transition: opacity 0.1s linear,transform 0.15s ease-in-out;
}

<div
  class="emotion-0"
>
  <input
    checked=""
    class="emotion-1"
    id="my-checkbox"
    type="checkbox"
  />
  <label
    class="emotion-2"
    for="my-checkbox"
  >
    My checkbox
  </label>
</div>
`;

exports[`Checkbox should not output styles when the \`unstyled\` prop is set 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <input
      class="emotion-0"
      id="unstyled-checkbox"
      type="checkbox"
    />
    <label
      class="emotion-0"
      for="unstyled-checkbox"
    >
      My checkbox
    </label>
  </div>
</div>
`;

exports[`Checkbox shouldn't have a margin when \`noMargin\` is true 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: 0;
  opacity: 0;
  position: absolute;
  z-index: 1;
}

.emotion-1:checked+label {
  color: #181b1c;
}

.emotion-1+label::after {
  content: '';
  opacity: 0;
  -webkit-transform: rotate(-35deg);
  -moz-transform: rotate(-35deg);
  -ms-transform: rotate(-35deg);
  transform: rotate(-35deg);
}

.emotion-1:checked+label::after {
  opacity: 1;
  -webkit-transform: rotate(-50deg);
  -moz-transform: rotate(-50deg);
  -ms-transform: rotate(-50deg);
  transform: rotate(-50deg);
}

.emotion-1:focus+label {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
  padding-right: 0.4rem;
  padding-bottom: 0.2rem;
}

.emotion-2 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 500;
  font-size: 1.7rem;
  line-height: 1.411764705882353;
  color: #3b3f45;
  position: relative;
  padding-left: 3.2rem;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.emotion-2::before,
.emotion-2::after {
  position: absolute;
}

.emotion-2::before {
  border: 2px solid #181b1c;
  background: #ffffff;
  content: '';
  display: inline-block;
  height: 2rem;
  width: 2rem;
  top: -2px;
  left: 0;
}

.emotion-2::after {
  left: 4px;
  top: 4px;
  content: '';
  display: inline-block;
  height: 6px;
  width: 14px;
  border-left: 3px solid #0097a2;
  border-bottom: 3px solid #0097a2;
  -webkit-transition: opacity 0.1s linear,-webkit-transform 0.15s ease-in-out;
  transition: opacity 0.1s linear,transform 0.15s ease-in-out;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
    id="no-margin-checkbox"
    type="checkbox"
  />
  <label
    class="emotion-2"
    for="no-margin-checkbox"
  >
    My checkbox
  </label>
</div>
`;
